# cui-sfml

./: .clang-format  .gitignore  .gitmodules  CHECK.txt.txt  CMakeCache.txt  CMakeLists.txt  CUI-SFML.cbp  LICENSE  Makefile  clear_build.bat  cmake_install.cmake  compile.bat  zavrsni.docx
CUI/: .clang-format  .gitignore  CMakeLists.txt  CUI.cbp  CUIConfig.cmake  Makefile  cmake_install.cmake  install_manifest.txt  writing_comments.txt
CUI/include/cui/: aliases.hpp  event_predicate.hpp  scene_state.hpp  value_data.hpp  window.hpp
CUI/include/cui/compile_time/: scene.hpp  style.hpp  value_data.hpp
CUI/include/cui/compile_time/data_types/: color.hpp  instruction.hpp  string.hpp  vec.hpp
CUI/include/cui/compile_time/exception/: ct_exception.hpp
CUI/include/cui/compile_time/format/: fmt.hpp  fmt_string_view.hpp  format.hpp
CUI/include/cui/compile_time/format/detail/: consume.hpp  pow.hpp  size_information.hpp
CUI/include/cui/compile_time/mem_utils/: memcpy.hpp  memmove.hpp  memset.hpp
CUI/include/cui/compile_time/scenes/: block.hpp  parse_scenes.hpp
CUI/include/cui/compile_time/scenes/detail/: count_amount_of_blocks.hpp  count_max_depth.hpp  count_tabs.hpp  find_parent.hpp  valid_block_name.hpp
CUI/include/cui/compile_time/stream/: stream.hpp  stream_utils.hpp
CUI/include/cui/compile_time/string/: char_traits.hpp  string_view.hpp
CUI/include/cui/compile_time/styles/: attribute_data.hpp  definition.hpp  parse_attribute_value.hpp  parse_styles.hpp
CUI/include/cui/compile_time/styles/detail/: constants.hpp  helper_macros.hpp  valid_attribute_types.hpp
CUI/include/cui/compile_time/variant/: variant.hpp
CUI/include/cui/containers/: list.hpp  nary_tree.hpp  static_stack.hpp  static_vector.hpp  tracked_list.hpp  tracked_vector.hpp  vector.hpp
CUI/include/cui/containers/detail/nary_tree/: node.hpp
CUI/include/cui/data_types/: color.hpp  data_types.hpp  instruction.hpp  string.hpp  vec.hpp
CUI/include/cui/engine/: base_event_manager.hpp
CUI/include/cui/mem_profiler/: memcounter.hpp
CUI/include/cui/utils/: abs.hpp  as_const.hpp  declval.hpp  distance.hpp  forward.hpp  get_path_head.hpp  make_array.hpp  min.hpp  move.hpp  print.hpp  void_t.hpp
CUI/include/cui/utils/detail/: remove_reference.hpp
CUI/include/cui/visual/: attributes.hpp  base_render_context.hpp  node.hpp  rules.hpp  scene_graph.hpp  schematic.hpp
cui/: .gitignore  .gitmodules  CMakeLists.txt  build.bat  compile.bat  test.styles
cui/include/: window.hpp
cui/include/compile_time/: scene.hpp
cui/include/compile_time/data_types/: color.hpp  data_types.hpp  instruction.hpp
cui/include/compile_time/format/detail/: consume.hpp  log10.hpp
cui/include/compile_time/mem_utils/: memcpy.hpp  memset.hpp
cui/include/compile_time/scenes/detail/: count_amount_of_blocks.hpp  count_tabs.hpp
cui/include/compile_time/stream/: stream_utils.hpp
cui/include/compile_time/string/: char_traits.hpp  string_view.hpp
cui/include/compile_time/styles/: attribute.hpp  data_with_rule.hpp  definition.hpp  parse_styles.hpp
cui/include/compile_time/styles/detail/: constants.hpp  valid_attribute_types.hpp
cui/include/compile_time/styles/detail/values/: function_argument_list.hpp  index_of_function_name.hpp  is_correct_value_for_attr_type.hpp  lookup_string.hpp  validate_attribute_type.hpp
cui/include/compile_time/variant/: variant.hpp
cui/include/containers/: vector.hpp
cui/include/containers/detail/nary_tree/: const_node_iterator.hpp  node_iterator.hpp
cui/include/deprecated-new/compile_time/: abs.hpp  exception.hpp  format.hpp  log10.hpp  pow.hpp  stack.hpp  static_vector.hpp  string_view.hpp  variant.hpp
cui/include/deprecated-new/compile_time/mem_utils/: memcpy.hpp  memmove.hpp  memset.hpp
cui/include/deprecated-new/compile_time/string_utils/: char_traits.hpp  trim_sv.hpp
cui/include/deprecated-new/data_types/: color.hpp  instruction.hpp  vector.hpp
cui/include/deprecated-new/engine/: event_manager.hpp
cui/include/deprecated-new/global/: array.hpp  constants.hpp  empty_type.hpp  format.hpp  make_array.hpp  min.hpp  nary_tree.hpp  reassign_type.hpp  sized_string.hpp  tracked_array.hpp  tracked_vector.hpp  vector.hpp  whitespace.hpp
cui/include/deprecated-new/parse_utils/: stream.hpp  stream_utils.hpp
cui/include/deprecated-new/scenes/: block.hpp  parser.hpp  scene.hpp  scene_collection.hpp
cui/include/deprecated-new/scenes/detail/scene_parsing/: count_amount_of_blocks.hpp  count_max_depth.hpp  count_tabs.hpp  find_parent.hpp  valid_block_name.hpp
cui/include/deprecated-new/styles/: attribute.hpp  attribute_data.hpp  constants.hpp  count_definitions.hpp  data.hpp  data_with_rule.hpp  definition.hpp  function_ids.hpp  parser.hpp  style.hpp  style_collection.hpp  valid_attribute_types.hpp
cui/include/deprecated-new/styles/detail/: char_checks.hpp  dt_to_vat.hpp  function_argument_list.hpp  get_attribute_index.hpp  index_of_function_name.hpp  is_correct_value_for_attr_type.hpp  lookup_function.hpp  lookup_string.hpp  parse_attribute_value.hpp  parse_float.hpp  parse_int.hpp  parse_percentage.hpp  validate_attribute_type.hpp  value_type.hpp
cui/include/deprecated-new/visual/: attributes.hpp  node.hpp  render_context.hpp  rules.hpp  scene_graph.hpp  schematic.hpp  window.hpp
cui/include/deprecated-new/visual/detail/render_context/: has_cache.hpp
cui/include/deprecated-new/visual/metadata/: node.hpp
cui/include/deprecated/ct/: scene.hpp  scene_graph.hpp  stack.hpp  static_string_stream.hpp  string.hpp  styles.hpp  styles_data.hpp  type_wrapper.hpp  variant.hpp
cui/include/deprecated/ct/styles_data/: block_instructions.hpp
cui/include/deprecated/utility/: diag.hpp  printing.hpp  utility.hpp
cui/include/deprecated/visual/: cui_to_sf_mapper.hpp  draw_instruction.hpp  scene_graph.hpp  tree.hpp  ve.hpp
cui/include/engine/detail/has/: cache.hpp  poll_event.hpp
cui/include/global/: memtrack.hpp
cui/include/utils/detail/: declval_impl.hpp  integral_constant.hpp  is_lvalue_reference.hpp
cui/include/visual/: node.hpp  rules.hpp  scene_graph.hpp
cui/src/: main.cpp
(+88 files in other folders)
